--- a/style.css
+++ b/style.css
@@ -22,6 +22,7 @@ header nav i{
     color: black;
     display:flex;
     justify-content: space-between;
+    align-items: center;
 }
 header nav a{
     text-decoration: none;
@@ -77,10 +78,10 @@ header nav a{
 }
 
 .article-img img{
-    width: 340px;
-    height: 340px;
-    object-fit: cover;
-    object-position: top;
+   height: 100%;
+   width: 100%;
+   display: flex;
+   flex-direction: column;
 }
 .article-text .container{
     max-width: 290px;
@@ -117,9 +118,14 @@ header nav a{
 .article-text{
     
     background-color: whitesmoke;
+    border: 1px solid black;
+
     
 }
-
+section .tours-body article .article-img{
+    width: 340px;
+    height: 340px;
+}
 
 
 
